# knowledge-notebook

./: docker-compose.yml  flake.nix
backend/: Cargo.toml
backend/src/: auth.rs  main.rs  models.rs  users.rs  utils.rs
