[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "chrono"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
anyhow = "1.0"
serde = "1.0.228"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
password-hash = "0.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
