[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

# sqlx with uuid + postgres support
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

argon2 = "0.5"
password-hash = "0.5"

tracing-subscriber = "0.3"
thiserror = "2.0.17"
rand_core = { version = "0.6", features = ["std"] }
tracing = "0.1"
dotenvy = "0.15"
